refactor: replace buttons to link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h1 class="font-bold text-lg text-white">Agência LM</h1>
           </div>
           <a
-            href="#"
+            href="https://wa.me/5538992622985?text=%F0%9F%91%8B%20Ol%C3%A1!%20Obrigado%20por%20entrar%20em%20contato.%20Como%20posso%20ajudar%20voc%C3%AA%20hoje%3F"
             target="_blank"
             rel="noreferrer noopener nofollow"
             class="bg-purple-500 text-white rounded-full px-4 py-2 shadow-md hover:scale-105 hover:shadow-lg transition-all ease-in-out duration-300 cursor-pointer"
@@ -85,7 +85,7 @@
                 class="flex flex-col gap-1 items-center md:items-start justify-center md:justify-start w-full"
               >
                 <h1
-                  class="font-poppins-bold text-3xl text-center font-bold md:text-left md:max-w-3xl text-purple-500 uppercase"
+                  class="font-poppins-bold text-xl md:text-3xl text-center font-bold md:text-left md:max-w-3xl text-purple-500 uppercase"
                 >
                   Sua clínica é única
                 </h1>
@@ -115,11 +115,15 @@
               <div
                 class="flex flex-wrap items-center justify-center md:justify-start gap-4 w-full"
               >
-                <button
+                <a
+                  href="https://wa.me/5538992622985?text=Ol%C3%A1!%20Quero%20garantir%20minha%20Landing%20Page%20aut%C3%AAntica.%20Pode%20me%20dar%20mais%20detalhes%3F
+                "
+                  target="_blank"
+                  rel="noreferrer noopener nofollow"
                   class="cta-animate bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
                 >
                   Garantir minha LP autêntica
-                </button>
+                </a>
               </div>
             </div>
             <div
@@ -293,11 +297,15 @@
             </div>
           </div>
 
-          <button
+          <a
+            href="https://wa.me/5538992622985?text=Ol%C3%A1!%20Gostaria%20de%20garantir%20minha%20Landing%20Page.%20Pode%20me%20orientar%20sobre%20os%20pr%C3%B3ximos%20passos%3F
+          "
+            target="_blank"
+            rel="noreferrer noopener nofollow"
             class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
           >
             Garantir minha Landing Page
-          </button>
+          </a>
         </section>
 
         <!-- Offer section -->
@@ -380,11 +388,15 @@
                 </li>
               </ul>
 
-              <button
+              <a
+                href="https://wa.me/5538992622985?text=Ol%C3%A1!%20Quero%20garantir%20a%20promo%C3%A7%C3%A3o%20da%20Landing%20Page.%20Como%20funciona%3F
+              "
+                target="_blank"
+                rel="noreferrer noopener nofollow"
                 class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl mt-5"
               >
                 Garantir promoção
-              </button>
+              </a>
             </div>
             <div
               id="offer-card-two"
@@ -457,11 +469,15 @@
                 </li>
               </ul>
 
-              <button
+              <a
+                href="https://wa.me/5538992622985?text=Ol%C3%A1!%20Tenho%20interesse%20na%20Landing%20Page%20Avan%C3%A7ada.%20Pode%20me%20explicar%20melhor%3F
+              "
+                target="_blank"
+                rel="noreferrer noopener nofollow"
                 class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl mt-5"
               >
                 Garantir minha LP avançada
-              </button>
+              </a>
             </div>
           </div>
         </section>
@@ -669,13 +685,48 @@
               </div>
             </div>
 
-            <button
+            <a
+              href="https://wa.me/5538992622985?text=Ol%C3%A1!%20Quero%20minha%20Landing%20Page%20aut%C3%AAntica.%20Pode%20me%20passar%20os%20detalhes%3F
+            "
+              target="_blank"
+              rel="noreferrer noopener nofollow"
               class="cta-animate bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
             >
               Quero minha LP autêntica
-            </button>
+            </a>
           </div>
         </section>
+
+        <footer class="flex flex-col items-center justify-center gap-5">
+          <img
+            src="/public/lm-logo.svg"
+            alt="Logo Agência LM"
+            loading="lazy"
+            class="pointer-events-none size-10"
+          />
+          <ul class="flex gap-5 items-center">
+            <li class="text-white text-sm">
+              <a
+                href="https://wa.me/5538992622985?text=%F0%9F%91%8B%20Ol%C3%A1!%20Obrigado%20por%20entrar%20em%20contato.%20Como%20posso%20ajudar%20voc%C3%AA%20hoje%3F"
+                target="_blank"
+                rel="noreferrer noopener nofollow"
+                class="flex items-center gap-2 p-3 rounded-full hover:bg-purple-500 transition-all duration-300 ease-in-out"
+                ><i class="fa-brands fa-whatsapp"></i
+                ><span>(38) 9262-2985</span></a
+              >
+            </li>
+            <li class="text-white text-sm">
+              <a
+                href="https://www.instagram.com/agencialm.lp/"
+                target="_blank"
+                rel="noreferrer noopener nofollow"
+                class="flex items-center gap-2 p-3 rounded-full hover:bg-purple-500 transition-all duration-300 ease-in-out"
+                ><i class="fa-brands fa-instagram"></i
+                ><span>@agencialm.lp</span></a
+              >
+            </li>
+          </ul>
+        </footer>
       </main>
     </div>
 
