--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
               loading="lazy"
               class="pointer-events-none size-10"
             />
-            <h1 class="font-bold text-lg text-white">Agência LM</h1>
+            <h1 class="font-bold text-lg text-white hidden md:block">
+              Agência LM
+            </h1>
           </div>
           <a
             href="https://wa.me/5538992622985?text=%F0%9F%91%8B%20Ol%C3%A1!%20Obrigado%20por%20entrar%20em%20contato.%20Como%20posso%20ajudar%20voc%C3%AA%20hoje%3F"
             target="_blank"
             rel="noreferrer noopener nofollow"
-            class="bg-purple-500 text-white rounded-full px-4 py-2 shadow-md hover:scale-105 hover:shadow-lg transition-all ease-in-out duration-300 cursor-pointer"
+            class="flex items-center justify-center gap-2 bg-purple-500 text-white rounded-full p-3 shadow-md hover:scale-105 hover:shadow-lg transition-all ease-in-out duration-300 cursor-pointer"
           >
             <i class="fa-brands fa-whatsapp"></i>
             <span>Entrar em contato</span>
@@ -120,7 +122,7 @@
                 "
                   target="_blank"
                   rel="noreferrer noopener nofollow"
-                  class="cta-animate bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
+                  class="cta-animate flex items-center justify-center bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
                 >
                   Garantir minha LP autêntica
                 </a>
@@ -302,7 +304,7 @@
           "
             target="_blank"
             rel="noreferrer noopener nofollow"
-            class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
+            class="flex items-center justify-center bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
           >
             Garantir minha Landing Page
           </a>
@@ -393,7 +395,7 @@
               "
                 target="_blank"
                 rel="noreferrer noopener nofollow"
-                class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl mt-5"
+                class="flex items-center justify-center bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl mt-5"
               >
                 Garantir promoção
               </a>
@@ -474,9 +476,9 @@
               "
                 target="_blank"
                 rel="noreferrer noopener nofollow"
-                class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl mt-5"
+                class="flex items-center justify-center bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl mt-5"
               >
-                Garantir minha LP avançada
+                Garantir LP avançada
               </a>
             </div>
           </div>
@@ -625,7 +627,7 @@
         >
           <div
             id="final-cta-content"
-            class="final-cta-card flex flex-col items-center gap-10 md:p-10 rounded-xl md:border md:border-purple-500 relative w-fit mx-auto"
+            class="final-cta-card flex flex-col items-center gap-10 p-5 md:p-10 rounded-xl md:border md:border-purple-500 relative w-fit mx-auto"
           >
             <div class="space-y-4 text-center">
               <h1 class="text-4xl font-bold text-purple-500">
@@ -690,9 +692,9 @@
             "
               target="_blank"
               rel="noreferrer noopener nofollow"
-              class="cta-animate bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
+              class="cta-animate flex items-center justify-center bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
             >
-              Quero minha LP autêntica
+              Quero a LP autêntica
             </a>
           </div>
         </section>
