feat: add copyright text

--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
               >
             </li>
           </ul>
+          <span class="text-white text-xs">Copyright © 2025 Agência LM</span>
         </footer>
       </main>
     </div>
