fix: fix classes conflict

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="mesh-gradient-background"></div>
       <header class="header w-full shadow-md py-5">
         <div
-          class="flex justify-between items-center w-full container mx-auto px-5"
+          class="flex justify-between items-center w-full md:container mx-auto px-5"
         >
           <div class="flex gap-2 items-center">
             <img
@@ -65,7 +65,7 @@
           class="w-full lg:p-0"
         >
           <div
-            class="container px-5 flex flex-col lg:flex-row items-center justify-center min-h-svh w-full mx-auto"
+            class="md:container px-5 flex flex-col lg:flex-row items-center justify-center min-h-svh w-full mx-auto"
           >
             <div
               id="hero-headline"
@@ -284,7 +284,7 @@
         <!-- Offer section -->
         <section
           id="offer-section"
-          class="container px-5 mx-auto w-full lg:p-0"
+          class="md:container px-5 mx-auto w-full lg:p-0"
         >
           <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
             <div
@@ -470,7 +470,7 @@
         </section>
 
         <!-- Benefits section -->
-        <section class="container px-5 mx-auto w-full lg:p-0">
+        <section class="md:container px-5 mx-auto w-full lg:p-0">
           <div
             id="benefits-section"
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"
@@ -543,7 +543,7 @@
         <!-- About our service section -->
         <section
           id="our-service-section"
-          class="container px-5 mx-auto w-full lg:p-0"
+          class="md:container px-5 mx-auto w-full lg:p-0"
         >
           <div
             class="grid grid-cols-1 md:grid-cols-2 w-full gap-5 items-center"
@@ -608,7 +608,7 @@
         <!-- Final CTA section -->
         <section
           id="final-cta-section"
-          class="container px-5 mx-auto w-full lg:p-0"
+          class="md:container px-5 mx-auto w-full lg:p-0"
         >
           <div
             id="final-cta-content"
