fix: ensure all paths on images src and links href are correctly

--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/src/styles/global.css"
+      href="./src/styles/output.css"
     />
-
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    
     <script
       src="https://kit.fontawesome.com/3349982834.js"
       crossorigin="anonymous"
     ></script>
     <script
-      src="src/scripts/animation.js"
+      src="./src/scripts/animation.js"
       defer
     ></script>
     <script
-      src="src/scripts/see-more-button-toggle.js"
+      src="./src/scripts/see-more-button-toggle.js"
       defer
     ></script>
   </head>
@@ -37,7 +36,7 @@
         >
           <div class="flex gap-2 items-center">
             <img
-              src="/public/lm-logo.svg"
+              src="./public/lm-logo.svg"
               alt="Logo Agência LM"
               loading="lazy"
               class="pointer-events-none size-10"
@@ -122,7 +121,7 @@
               class="w-full md:w-1/2"
             >
               <img
-                src="/public/mockup.webp"
+                src="./public/mockup.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -153,7 +152,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/public/lp-andre-romano.webp"
+                src="./public/lp-andre-romano.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -173,7 +172,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/public/lp-bruno-caldas.webp"
+                src="./public/lp-bruno-caldas.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -193,7 +192,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/public/lp-cionara.webp"
+                src="./public/lp-cionara.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -213,7 +212,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/public/lp-dra-paula-alonso.webp"
+                src="./public/lp-dra-paula-alonso.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -233,7 +232,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/public/lp-raquel-soares.webp"
+                src="./public/lp-raquel-soares.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -253,7 +252,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/public/lp-tatiana.webp"
+                src="./public/lp-tatiana.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -595,7 +594,7 @@
               class="w-full h-auto"
             >
               <img
-                src="/public/mockup-2.webp"
+                src="./public/mockup-2.webp"
                 alt="Mockup 2"
                 title="Mockup"
                 loading="lazy"
@@ -686,7 +685,7 @@
 
         <footer class="flex flex-col items-center justify-center gap-5">
           <img
-            src="/public/lm-logo.svg"
+            src="./public/lm-logo.svg"
             alt="Logo Agência LM"
             loading="lazy"
             class="pointer-events-none size-10"
