chore: add seo meta tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
       name="theme-color"
       content="#6b21a8"
     />
+    <meta
+      name="description"
+      content="Desenvolvemos landing pages personalizadas para clínicas de estética e profissionais de beleza. Design moderno, alta conversão e foco em resultados."
+    />
+    <meta
+      name="keywords"
+      content="landing page estética, criação de site estética, páginas de vendas beleza, marketing digital estética, desenvolvimento landing page, sites para clínicas"
+    />
+    <meta
+      property="og:title"
+      content="Landing Pages para Clínicas de Estética e Beleza | Criação Profissional"
+    />
+    <meta
+      property="og:description"
+      content="Landing pages feitas sob medida para clínicas de estética e profissionais da beleza. Transforme visitantes em clientes com páginas de alta conversão."
+    />
+    <meta
+      property="og:image"
+      content="https://seudominio.com/public/lm-logo.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://sprightly-bienenstitch-a31037.netlify.app/"
+    />
+    <meta
+      property="og:type"
+      content="website"
+    />
 
     <link
       rel="stylesheet"
