perf: add image height and width to improve CLS

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
                 src="./public/mockup.webp"
                 alt="Mockup"
                 title="Mockup"
+                width="600"
+                height="600"
                 loading="lazy"
                 class="object-cover pointer-events-none"
               />
@@ -214,6 +216,8 @@
                 src="./public/lp-andre-romano.webp"
                 alt="Mockup"
                 title="Mockup"
+                width="800"
+                height="600"
                 loading="lazy"
                 class="object-cover pointer-events-none rounded-lg shadow-md"
               />
@@ -234,6 +238,8 @@
                 src="./public/lp-bruno-caldas.webp"
                 alt="Mockup"
                 title="Mockup"
+                width="800"
+                height="600"
                 loading="lazy"
                 class="object-cover pointer-events-none rounded-lg shadow-md"
               />
@@ -254,6 +260,8 @@
                 src="./public/lp-cionara.webp"
                 alt="Mockup"
                 title="Mockup"
+                width="800"
+                height="600"
                 loading="lazy"
                 class="object-cover pointer-events-none rounded-lg shadow-md"
               />
@@ -274,6 +282,8 @@
                 src="./public/lp-dra-paula-alonso.webp"
                 alt="Mockup"
                 title="Mockup"
+                width="800"
+                height="600"
                 loading="lazy"
                 class="object-cover pointer-events-none rounded-lg shadow-md"
               />
@@ -294,6 +304,8 @@
                 src="./public/lp-raquel-soares.webp"
                 alt="Mockup"
                 title="Mockup"
+                width="800"
+                height="600"
                 loading="lazy"
                 class="object-cover pointer-events-none rounded-lg shadow-md"
               />
@@ -314,6 +326,8 @@
                 src="./public/lp-tatiana.webp"
                 alt="Mockup"
                 title="Mockup"
+                width="800"
+                height="600"
                 loading="lazy"
                 class="object-cover pointer-events-none rounded-lg shadow-md"
               />
@@ -656,6 +670,8 @@
                 src="./public/mockup-2.webp"
                 alt="Mockup 2"
                 title="Mockup"
+                width="600"
+                height="600"
                 loading="lazy"
                 class="object-cover pointer-events-none"
               />
@@ -746,6 +762,8 @@
           <img
             src="./public/lm-logo.svg"
             alt="Logo Agência LM"
+            width="40"
+            height="40"
             loading="lazy"
             class="pointer-events-none size-10"
           />
