perf: remove font awesome and add icons file

--- a/index.html
+++ b/index.html
@@ -70,10 +70,6 @@
     />
 
     <script
-      src="https://kit.fontawesome.com/3349982834.js"
-      crossorigin="anonymous"
-    ></script>
-    <script
       src="./src/scripts/animation.js"
       defer
     ></script>
@@ -110,7 +106,13 @@
             rel="noreferrer noopener nofollow"
             class="flex items-center justify-center gap-2 bg-purple-500 text-white rounded-full p-3 shadow-md hover:scale-105 hover:shadow-lg transition-all ease-in-out duration-300 cursor-pointer"
           >
-            <i class="fa-brands fa-whatsapp"></i>
+            <img
+              src="./public/whatsapp-brands-solid-full.svg"
+              alt="WhatsApp"
+              loading="lazy"
+              width="20"
+              height="20"
+            />
             <span>Entrar em contato</span>
           </a>
         </div>
@@ -364,9 +366,13 @@
               class="card flex flex-col items-start p-4 gap-5"
             >
               <div class="flex gap-1 items-center justify-start">
-                <i
-                  class="fa-solid fa-star-half-stroke text-xl text-purple-500"
-                ></i>
+                <img
+                  src="./public/star-half-stroke-solid-full.svg"
+                  alt="Meia estrela"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
                 <h3 class="capitalize text-white">landing page simples</h3>
               </div>
 
@@ -391,49 +397,104 @@
                 class="md:hidden see-more-button cursor-pointer text-white text-xs"
               >
                 Ver detalhes
-                <i class="fa-solid fa-chevron-down"></i>
+                <img
+                  src="./public/chevron-down-solid-full.svg"
+                  alt="Mostrar mais"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
               </button>
 
               <ul class="hidden md:block space-y-2 mt-5">
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Criação da copy a partir de briefing estratégico.</span
                   >
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Hospedagem do site. (necessário ter hospedagem)</span
                   >
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Direito a até 2 alterações sem custo adicional.</span
                   >
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal">
                     Auxílio completo para contratação da hospedagem. (caso ainda
                     não tenha)
                   </span>
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Página autêntica e única, feita para converter.</span
                   >
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-xmark text-gray-500"></i>
+                  <img
+                    src="./public/circle-xmark-solid-full.svg"
+                    alt="X"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-gray-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Formulário de captação integrado com Google Planilhas</span
                   >
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-xmark text-gray-500"></i>
+                  <img
+                    src="./public/circle-xmark-solid-full.svg"
+                    alt="X"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-gray-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Animações elaboradas</span
                   >
@@ -455,7 +516,13 @@
               class="card flex flex-col items-start p-4 gap-5"
             >
               <div class="flex gap-1 items-center justify-start">
-                <i class="fa-solid fa-star text-xl text-purple-500"></i>
+                <img
+                  src="./public/star-solid-full.svg"
+                  alt="Estrela"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
                 <h3 class="capitalize text-white">landing page avançada</h3>
               </div>
 
@@ -479,49 +546,104 @@
                 class="md:hidden see-more-button cursor-pointer text-white text-xs"
               >
                 Ver detalhes
-                <i class="fa-solid fa-chevron-down"></i>
+                <img
+                  src="./public/chevron-down-solid-full.svg"
+                  alt="Mostrar mais"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
               </button>
 
               <ul class="hidden md:block space-y-2 mt-5">
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Criação da copy a partir de briefing estratégico.</span
                   >
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Hospedagem do site. (necessário ter hospedagem)</span
                   >
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Direito a até 3 alterações sem custo adicional.</span
                   >
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal">
                     Auxílio completo para contratação da hospedagem. (caso ainda
                     não tenha)
                   </span>
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Página autêntica e única, feita para converter.</span
                   >
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Formulário de captação integrado com Google Planilhas</span
                   >
                 </li>
                 <li class="flex items-center gap-1">
-                  <i class="fa-solid fa-circle-check text-purple-500"></i>
+                  <img
+                    src="./public/circle-check-solid-full.svg"
+                    alt="Check"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                    class="text-purple-500"
+                  />
                   <span class="text-white text-sm font-normal"
                     >Animações elaboradas</span
                   >
@@ -559,7 +681,13 @@
               class="card rounded-sm flex items-center justify-between p-4 gap-3"
             >
               <div class="p-3 rounded-xl bg-purple-500 shadow-md">
-                <i class="fa-solid fa-eye text-white"></i>
+                <img
+                  src="./public/eye-solid-full.svg"
+                  alt="Olho"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
               </div>
               <h3 class="text-white font-medium text-base/4">
                 Mais visibilidade digital e autoridade no mercado
@@ -570,7 +698,13 @@
               class="card rounded-sm flex items-center justify-between p-4 gap-3"
             >
               <div class="p-3 rounded-xl bg-purple-500 shadow-md">
-                <i class="fa-solid fa-fire-flame-curved text-white"></i>
+                <img
+                  src="./public/fire-flame-curved-solid-full.svg"
+                  alt="Chama"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
               </div>
               <h3 class="text-white font-medium text-base/4">
                 Páginas que encantam e transmitem confiança
@@ -581,7 +715,13 @@
               class="card rounded-sm flex items-center justify-between p-4 gap-3"
             >
               <div class="p-3 rounded-xl bg-purple-500 shadow-md">
-                <i class="fa-solid fa-handshake-angle text-white"></i>
+                <img
+                  src="./public/handshake-angle-solid-full.svg"
+                  alt="Parceria"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
               </div>
               <h3 class="text-white font-medium text-base/4">
                 Clientes qualificados entrando em contato com você
@@ -592,7 +732,13 @@
               class="card rounded-sm flex items-center justify-between p-4 gap-3"
             >
               <div class="p-3 rounded-xl bg-purple-500 shadow-md">
-                <i class="fa-solid fa-clock text-white"></i>
+                <img
+                  src="./public/clock-solid-full.svg"
+                  alt="Relógio"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
               </div>
               <h3 class="text-white font-medium text-base/4">
                 Mais tempo livre para focar nos atendimentos
@@ -603,7 +749,13 @@
               class="card rounded-sm flex items-center justify-between p-4 gap-3"
             >
               <div class="p-3 rounded-xl bg-purple-500 shadow-md">
-                <i class="fa-solid fa-magnet text-white"></i>
+                <img
+                  src="./public/magnet-solid-full.svg"
+                  alt="Ímã"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
               </div>
               <h3 class="text-white font-medium text-base/4">
                 Um posicionamento online sofisticado e magnético
@@ -715,7 +867,13 @@
               <div
                 class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
               >
-                <i class="fa-solid fa-lock text-purple-500"></i>
+                <img
+                  src="./public/lock-solid-full.svg"
+                  alt="Cadeado"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
                 <span
                   >Condições válidas apenas para as
                   <span class="md:bg-purple-500 md:p-1 md:px-2 md:rounded-full"
@@ -728,7 +886,13 @@
                 <div
                   class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
                 >
-                  <i class="fa-solid fa-gift text-purple-500"></i>
+                  <img
+                    src="./public/gift-solid-full.svg"
+                    alt="Presente"
+                    loading="lazy"
+                    width="20"
+                    height="20"
+                  />
                   <span
                     >Bônus exclusivo:
                     <span
@@ -774,7 +938,13 @@
                 target="_blank"
                 rel="noreferrer noopener nofollow"
                 class="flex items-center gap-2 p-3 rounded-full hover:bg-purple-500 transition-all duration-300 ease-in-out"
-                ><i class="fa-brands fa-whatsapp"></i
+                ><img
+                  src="./public/whatsapp-brands-solid-full.svg"
+                  alt="WhatsApp"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
                 ><span>(38) 9262-2985</span></a
               >
             </li>
@@ -784,7 +954,13 @@
                 target="_blank"
                 rel="noreferrer noopener nofollow"
                 class="flex items-center gap-2 p-3 rounded-full hover:bg-purple-500 transition-all duration-300 ease-in-out"
-                ><i class="fa-brands fa-instagram"></i
+                ><img
+                  src="./public/instagram-brands-solid-full.svg"
+                  alt="Instagram"
+                  loading="lazy"
+                  width="20"
+                  height="20"
+                />
                 ><span>@agencialm.lp</span></a
               >
             </li>
